# cantata

./: CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: FindCdparanoia.cmake  FindTaglib.cmake
windows/: CMakeLists.txt  cantata.nsi.cmake
